сделала вёрстку Личного кабинета пользователя и исправила теги в файле guide_page.jsp

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -47,6 +47,13 @@ h4 {
     text-align:center;
 }
 
+.left_col {
+    width:120px;
+    height:460px;
+    background-color:#ffffff;
+    padding:15px;
+    vertical-align:top}
+
 .right_col {
     width:120px;
     height:460px;
