вместо одной формы на странице add_excursion_for_admin.jsp сделала три, исправила ошибки в тегах, добавила вывод сообщения при успешном добавлении экскурсии, также добавила вёрстку страницы

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -46,6 +46,18 @@ h4 {
     padding:20px;
     text-align:center;
 }
+.header2 {
+    height:200px;
+    background-color:#ffffff;
+    padding:20px;
+    text-align:center;
+}
+.header3 {
+    height:200px;
+    background-color:#ffffff;
+    padding:20px;
+    text-align:center;
+}
 
 .left_col {
     width:350px;
