--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -58,6 +58,12 @@ h4 {
     padding:20px;
     text-align:center;
 }
+.header4 {
+    height:20px;
+    background-color:#ffffff;
+    padding:20px;
+    text-align:center;
+}
 
 .left_col {
     width:350px;
